[build-system]
requires = ["flit_core >=3.12.0,<4"]
build-backend = "flit_core.buildapi"

[dependency-groups]
lint = [
  # Linting tools
  "codespell >=2.4.2",
  "deptry >=0.25.1",
  "flake8 >=7.3.0",
  "flake8-rst-docstrings >=0.4.0",
  "mypy >=1.20.0",
  "numpydoc >=1.10.0",
  "pylint >=4.0.4",
  "ruff >=0.15.11",
  "vulture >=2.14",
  "yamllint >=1.38.0"
]
test = [
  # Base testing support
  "coverage[toml] >=7.13.4",
  "pytest >=9.0.2",
  "pytest-cov >=7.0.0",
  "pytest-env >=1.1.5"
]
docs = [
  # Documentation and example support
  "ipykernel",
  "ipython >=8.10.0",
  "jupyter_client",
  "myst-nb >=1.2.0",
  "nbconvert >=7.16.4",
  "sphinx >=8.0.0",
  "sphinx-autodoc-typehints",
  "sphinx-codeautolink >=0.16.2",
  "sphinx-copybutton >=0.5.2",
  "furo >=2023.9.10"
]
tox = [
  "tox >=4.53.0",
  "tox-gh >=1.7.1"
]
dev = [
  # Development and testing tools
  "bump-my-version >=1.3.0",
  "notebook",
  "pip >=26.0.1",
  "prek >=0.3.0",
  "watchdog >=6.0.0",
  {include-group = "docs"},
  {include-group = "lint"},
  {include-group = "test"},
  {include-group = "tox"}
]

[project]
name = "cdm_reader_mapper"
authors = [
  {name = "Ludwig Lierhammer", email = "ludwig.lierhammer@dwd.de"},
  {name = "Joseph Siddons", email = "joseph.siddons@noc.ac.uk"},
  {name = "Jan Marius Willruth", email = "jan.willruth@dwd.de"},
  {name = "Axel Andersson", email = "axel.andersson@dwd.de"},
  {name = "Tina Leiding", email = "tina.leiding@dwd.de"},
  {name = "Richard Cornes", email = "richard.cornes@noc.ac.uk"},
  {name = "Elizabeth Kent", email = "eck@noc.ac.uk"}
]
maintainers = [
  {name = "Ludwig Lierhammer", email = "ludwig.lierhammer@dwd.de"},
  {name = "Joseph Siddons", email = "joseph.siddons@noc.ac.uk"},
  {name = "Jan Marius Willruth", email = "jan.willruth@dwd.de"}
]
readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">=3.11.0"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["cdm_reader_mapper"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14"
]
dynamic = ["description", "version"]
dependencies = [
  "bottleneck >=1.3.1",
  "dask[array] >=2024.8.1",
  "datashader >=0.15.0",
  "distributed >=2.0",
  "h5netcdf >= 1.3.0",
  "msgpack",
  "netcdf4",
  "numba >=0.60.0",
  "pandas>=2.2.0",
  "platformdirs >4.0.0",
  "pyarrow >=15.0.0",
  "python-slugify",
  "recordlinkage >= 0.15",
  "requests",
  "swifter >=1.3.2",
  "timezonefinder >6.5.0,<9.0.0",
  "xarray >=2023.11.0,!=2024.10.0"
]

[project.urls]
"Homepage" = "https://cdm-reader-mapper.readthedocs.io"
"Source" = "https://github.com/glamod/cdm_reader_mapper"
"Changelog" = "https://cdm_reader_mapper.readthedocs.io/en/latest/changelog.html"
"Issue tracker" = "https://github.com/glamod/cdm_reader_mapper"

[tool]

[tool.bumpversion]
current_version = "2.4.1"
commit = true
commit_args = "--no-verify --signoff"
tag = false
tag_name = "v{new_version}"
allow_dirty = false
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(\\-(?P<release>[a-z]+)(\\.(?P<build>\\d+)))?"
serialize = [
  "{major}.{minor}.{patch}-{release}.{build}",
  "{major}.{minor}.{patch}"
]

[[tool.bumpversion.files]]
filename = "CITATION.cff"
include_bumps = ["release"]
search = "^version: \"[0-9]+\\.[0-9]+\\.[0-9]\""
regex = true
replace = "version: \"{new_version}\""

[[tool.bumpversion.files]]
filename = "src/cdm_reader_mapper/__init__.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""

[[tool.bumpversion.files]]
filename = ".cruft.json"
search = "\"version\": \"{current_version}\""
replace = "\"version\": \"{new_version}\""

[tool.bumpversion.parts.build]
independent = false

[tool.bumpversion.parts.release]
optional_value = "release"
values = ["dev", "release"]

[tool.codespell]
ignore-words-list = "astroid,sentinal,vaid,SME,ASII,TRU"
skip = "docs/_build,src/cdm_reader_mapper/mdf_reader/codes/**/*.json,src/cdm_reader_mapper/mdf_reader/schemas/**/*.json,src/cdm_reader_mapper/cdm_mapper/codes/**/*.json,tests/results/*"

[tool.coverage.paths]
source = ["src/cdm_reader_mapper/", "*/site-packages/cdm_reader_mapper/"]

[tool.coverage.run]
relative_files = true
omit = ["tests/*.py"]
source = ["cdm_reader_mapper"]

[tool.deptry]
ignore_notebooks = true

[tool.deptry.per_rule_ignores]
DEP001 = ["SBCK"]
DEP002 = ["bottleneck", "pyarrow"]
DEP004 = ["matplotlib", "pytest_socket"]

[tool.flit.sdist]
include = [
  ".zenodo.json",
  "AUTHORS.rst",
  "CHANGELOG.rst",
  "CONTRIBUTING.rst",
  "LICENSE",
  "Makefile",
  "README.rst",
  "environment-docs.yml",
  "docs/**/*.png",
  "docs/**/*.rst",
  "docs/**/*.txt",
  "docs/Makefile",
  "docs/conf.py",
  "docs/make.bat",
  "cdm_reader_mapper/**/*.json",
  "cdm_reader_mapper/**/*.py",
  "cdm_reader_mapper/**/*.txt",
  "cdm_reader_mapper/**/*.yml",
  "tests/**/*.py",
  "tox.toml"
]
exclude = [
  "*.py[co]",
  "__pycache__",
  ".*",
  "docs/_*",
  "docs/modules.rst",
  "pylintrc"
]

[tool.mypy]
files = "."
python_version = "3.12"
show_error_codes = true
strict = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
plugins = ["numpy.typing.mypy_plugin"]

[[tool.mypy.overrides]]
module = [
  "boltons.*",
  "cftime.*",
  "jsonpickle.*",
  "numba.*",
  "pytest_socket.*",
  "SBCK.*",
  "scipy.*",
  "sklearn.*",
  "statsmodels.*",
  "yamale.*",
  "yaml.*"
]
allow_untyped_defs = true
disable_error_code = "attr-defined"
ignore_missing_imports = true

[tool.numpydoc_validation]
checks = [
  "all", # report on all checks, except the below
  "EX01",
  "SA01",
  "ES01"
]
# remember to use single quotes for regex in TOML
exclude = [
  # don't report on objects that match any of these regex
  '\.undocumented_method$',
  '\.__repr__$'
]
override_SS05 = [
  # override SS05 to allow docstrings starting with these words
  '^Process ',
  '^Assess ',
  '^Access '
]

[tool.pytest]
minversion = "9.0"
addopts = [
  "-ra",
  "--color=yes",
  "--verbose"
]
filterwarnings = ["ignore::UserWarning"]
testpaths = [
  "tests"
]

[tool.ruff]
src = ["cdm_reader_mapper"]
line-length = 150
target-version = "py312"
exclude = [".git", "build", ".eggs"]
extend-include = [
  "*.ipynb" # Include notebooks
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
extend-select = [
  "D213", # multi-line-summary-second-line
  "RUF022" # unsorted-dunder-all
]
ignore = [
  "COM", # commas
  "D103", # missing-docstring-in-public-function
  "D205", # blank-line-after-summary
  "D400", # ends-in-period
  "D401" # non-imperative-mood
]
preview = true
select = [
  "B", # bugbear
  "BLE", # blind-except
  "C90", # mccabe-complexity
  "D", # docstrings
  "E", # pycodestyle errors
  "F", # pyflakes
  "FLY002", # static-join-to-fstring
  "G", # logging-format
  "I", # imports
  "N", # naming conventions
  "PERF", # iterator performance
  "PTH", # pathlib
  "RUF010", # explicit-f-string-type-conversion
  "RUF013", # implicit-optional
  "S", # bandit
  "UP", # python version conventions
  "W" # pycodestyle warnings
]

[tool.ruff.lint.flake8-bandit]
check-typed-exception = true

[tool.ruff.lint.flake8-import-conventions.aliases]
"matplotlib.pyplot" = "plt"
numpy = "np"
pandas = "pd"
scipy = "sp"
xarray = "xr"

[tool.ruff.lint.isort]
known-first-party = ["cdm_reader_mapper"]
case-sensitive = true
detect-same-package = false
lines-after-imports = 2
no-lines-before = ["future", "standard-library"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"docs/*.py" = ["D100", "D101", "D102", "D103"]
"tests/**/*test*.py" = ["D100", "D101", "D102", "D103", "N802", "S101"]
"src/cdm_reader_mapper/**/__init__.py" = ["F401", "F403"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 180

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.vulture]
exclude = []
ignore_decorators = ["@pytest.fixture"]
ignore_names = []
min_confidence = 90
paths = ["src/cdm_reader_mapper", "tests"]
sort_by_size = true
